@@ -6,11 +6,10 @@ COPY . /app
 RUN mvn -B clean package -DskipTests
 
 
-FROM ubuntu:22.04
+FROM eclipse-temurin:21-jdk
 
+# Install only what JavaFX needs
 RUN apt-get update && apt-get install -y \
-    openjdk-21-jdk \
-    openjfx \
     libgtk-3-0 \
     libgl1-mesa-glx \
     libxext6 \
@@ -21,8 +20,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
+# Copy jar + dependencies
 COPY --from=build /app/target/w3-assignment-1.0-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/lib ./lib
 
 ENV DISPLAY=host.docker.internal:0.0
 
-CMD ["java", "--module-path", "/usr/share/openjfx/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "app.jar"]
+CMD ["java", "-cp", "app.jar:lib/*", "app.Main"]
